Page MenuHome GnuPG

Kleopatra: S/MIME Details cannot be copied multiline on Windows
Closed, ResolvedPublic

Description

This is a weird one, only happens on Windows.

When selecting multiple lines in the certificate details window of Kleopatra and copying them, both through ctrl+c and the context menu, only one line is copied and not the selection.

Revisions and Commits

Event Timeline

aheinecke triaged this task as Normal priority.Apr 29 2022, 2:23 PM
aheinecke created this task.

Can you make a short video of this? On Linux/KDE Plasma, I'm not even able to select multiple lines in the certificate details window (or I'm trying the wrong thing).

Do you mean selecting multiple lines in the "Certificate Dump" window that hides behind the "More Details..." button in the certificate details window?

Sorry, yes I meant the Certificate Dump not the Details.

aheinecke claimed this task.

Just tested this on Windows, works now as expected. Thanks.

ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Jul 24 2023, 2:12 PM