Disable word wrap for certificate dump

This adds a horizontal scrollbar. I still think that in this case it's
worth it because it makes the "key: value" list of lines better readable.

GnuPG-bug-id: 5961